--- a/Android/Dwells/app/src/main/res/layout/kot_marker.xml
+++ b/Android/Dwells/app/src/main/res/layout/kot_marker.xml
@@ -3,39 +3,48 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical|center_horizontal"
-    android:background="#ADD8E6"
     android:gravity="center_vertical|center_horizontal"
-    android:orientation="horizontal" >
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/house" />
+    android:orientation="horizontal"
+    android:background="@android:color/transparent"
+    android:padding="5dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-
+<!--
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/house"
+            android:layout_gravity="left|right" />
+-->
         <TextView
             android:id="@+id/snippet"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:textColor="@android:color/black"
-            android:textSize="15sp" />
+            android:textSize="10sp"
+            android:text="40"
+            android:paddingLeft="5dp" />
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:textColor="@android:color/black"
             android:textSize="10sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:text="€999"
+            android:paddingLeft="5dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="View on web"
+            android:id="@+id/button" />
     </LinearLayout>
 
 </LinearLayout>
