--- a/Android/Dwells/app/src/main/res/layout/fragment_kot_detail.xml
+++ b/Android/Dwells/app/src/main/res/layout/fragment_kot_detail.xml
@@ -6,7 +6,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="me.madhvani.dwells.ui.KotDetail.WebViewFragment">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <WebView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/webView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
