--- a/Android/Dwells/app/src/main/res/layout/kot_marker.xml
+++ b/Android/Dwells/app/src/main/res/layout/kot_marker.xml
@@ -6,12 +6,14 @@
     android:gravity="center_vertical|center_horizontal"
     android:orientation="horizontal"
     android:background="@android:color/transparent"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:weightSum="1">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_weight="5.40">
 <!--
         <ImageView
             android:layout_width="fill_parent"
@@ -22,38 +24,57 @@
             android:layout_gravity="left|right" />
 -->
         <TextView
-            android:id="@+id/snippet"
-            android:layout_width="fill_parent"
+            android:id="@+id/location"
+            android:layout_width="238dp"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:text="Leuven"
+            android:textSize="25dp"
+            android:text="Lange Muntplein 6"
             android:paddingLeft="5dp"
             android:phoneNumber="false"
             android:autoText="true"
-            android:background="@color/button_material_dark" />
+            android:background="@color/button_material_dark"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp" />
 
-        <TextView
-            android:id="@+id/textView"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="30sp"
-            android:text="40³m"
-            android:paddingLeft="5dp" />
+            android:layout_height="fill_parent"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:text="€999"
-            android:paddingLeft="5dp" />
+            <TextView
+                android:id="@+id/area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
+                android:text="40³m"
+                android:paddingLeft="5dp" />
+
+            <TextView
+                android:id="@+id/separator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
+                android:paddingLeft="5dp"
+                android:text="@string/separator" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:text="€999"
+                android:paddingLeft="5dp" />
+        </LinearLayout>
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="View on web"
             android:id="@+id/button" />
