--- a/Android/Dwells/app/src/main/res/layout/bookmarks_card.xml
+++ b/Android/Dwells/app/src/main/res/layout/bookmarks_card.xml
@@ -5,6 +5,8 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    card_view:cardCornerRadius="4dp"
+    android:layout_margin="5dp"
     >
 
     <!-- Main Content View -->
@@ -12,11 +14,13 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:id="@+id/title" />
+            android:id="@+id/title"
+            android:padding="1dp"
+            android:paddingBottom="5dp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
