--- a/Android/Dwells/app/src/main/res/layout/bookmarks_card.xml
+++ b/Android/Dwells/app/src/main/res/layout/bookmarks_card.xml
@@ -10,17 +10,58 @@
     >
 
     <!-- Main Content View -->
-    <RelativeLayout android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
         <TextView
+            android:id="@+id/location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/title"
-            android:padding="1dp"
+            android:textColor="@android:color/white"
+            android:textSize="25dp"
+            android:text="Lange Muntplein 6"
+            android:paddingLeft="5dp"
+            android:phoneNumber="false"
+            android:autoText="true"
+            android:background="@color/button_material_dark"
+            android:paddingTop="5dp"
             android:paddingBottom="5dp" />
 
-    </RelativeLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
+
+            <TextView
+                android:id="@+id/area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
+                android:text="40³m"
+                android:paddingLeft="5dp" />
+
+            <TextView
+                android:id="@+id/separator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="30sp"
+                android:paddingLeft="5dp"
+                android:text="@string/separator" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:text="€999"
+                android:paddingLeft="5dp" />
+        </LinearLayout>
+</LinearLayout>
 </android.support.v7.widget.CardView>
