--- a/Android/Dwells/app/src/main/res/layout/fragment_maps.xml
+++ b/Android/Dwells/app/src/main/res/layout/fragment_maps.xml
@@ -1,10 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent" android:layout_height="fill_parent"
+    android:orientation="vertical">
 
     <com.google.android.gms.maps.MapView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/map"
-    />
-</LinearLayout>
+        android:singleLine="false" />
+    <LinearLayout
+        android:animateLayoutChanges="true"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/marker_actions"
+        android:layout_gravity="bottom"
+        android:visibility="invisible">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/view_on_web"
+            android:id="@+id/webview"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/bookmark"
+            android:layout_weight="1" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/bookmark"
+            android:id="@+id/bookmark"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_weight="1" />
+        </LinearLayout>
+</FrameLayout>
