--- a/Android/Dwells/app/src/main/res/layout/fragment_main.xml
+++ b/Android/Dwells/app/src/main/res/layout/fragment_main.xml
@@ -4,9 +4,81 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="me.madhvani.dwells.ui.MainActivity$PlaceholderFragment">
+    tools:context="me.madhvani.dwells.ui.MainActivity$PlaceholderFragment"
+    android:id="@+id/mainFragment">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/relativeLayout">
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Area"
+            android:id="@+id/switch1"
+            android:checked="false"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true" />
+
+        <SeekBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar"
+            android:layout_below="@+id/switch1"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/textView"
+            android:mirrorForRtl="false" />
+
+        <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Price"
+            android:id="@+id/switch2"
+            android:layout_below="@+id/seekBar"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:checked="false" />
+
+        <SeekBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar2"
+            android:layout_below="@+id/switch2"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/textView2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="10m³"
+            android:id="@+id/textView"
+            android:layout_below="@+id/switch1"
+            android:layout_above="@+id/switch2"
+            android:layout_alignParentEnd="true"
+            android:textAlignment="center"
+            android:gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="€200"
+            android:id="@+id/textView2"
+            android:layout_below="@+id/switch2"
+            android:layout_alignParentEnd="true"
+            android:gravity="center"
+            android:layout_alignBottom="@+id/seekBar2" />
+
+    </RelativeLayout>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/relativeLayout"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
